--- a/profil.html
+++ b/profil.html
@@ -5,48 +5,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
-    <div class="top-container title">
+    <div class="top-container heading">
         <div class="dropdown" style="margin-right:20px; float:left;">
-            <!-- <button class="dropbtn">MENU</button> -->
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
-            <div class="dropdown-content">
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-            </div>
+            <div class="dropdown-content" id="boxlink"></div>
+            <script src="script.js"></script>
         </div>
         <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
         <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
-        <div class="title" id="home" style="font-size:50px; color:#146480;"><b>PROFIL</b></div>
+        <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>PROFIL</b></div>
         <p style="font-size:25px; color:#000080;"><b>Gambar</b></p>
         <div class="image">
             <img src="images/IMG_20200105_121417.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
             <img src="images/Gambar Profil.jpg" width="150" style="border: 2px solid black; border-radius: 50%;">
         </div>
-        <p class="title" style="font-size:25px; color:#000080;"><b>Biodata</b></p>
+        <p class="heading" style="font-size:25px; color:#000080;"><b>Biodata</b></p>
         <p style="line-height:1.7;">
         Nama: Devan Da**e* *<br>
         Tanggal lahir: 0*/0*/200*<br>
         Username: dev*ndan**l9<br>
         Lokasi: Semarang
         </p>
-        <p class="title" style="font-size:25px; color:#000080;"><b>Kesukaan</b></p>
+        <p class="heading" style="font-size:25px; color:#000080;"><b>Kesukaan</b></p>
         <p>
         Buka aplikasi VS Code<br>
         Mengerjakan program<br>
         Suka pelajaran Matematika dan Bahasa Inggris
         </p>
-        <p class="title" style="font-size:25px; color:#000080;"><b>Histori</b></p>
-        <p class="title" style="font-size:25px; color:#000080;"><b>Social Links</b></p>
+        <p class="heading" style="font-size:25px; color:#000080;"><b>Histori</b></p>
+        <p class="heading" style="font-size:25px; color:#000080;"><b>Social Links</b></p>
         <p>
             <!-- https://www.instagram.com/devandaniel09 -->
             Instagram: <img src="images/instagram-icon.png" width="20" style="vertical-align:bottom; padding:2px;">
@@ -57,13 +51,13 @@
             Link beberapa teman/orang:<br>
             <a href="orang.html">Daftar Teman & Orang</a>
         </p>
-        <p class="title" style="font-size:25px; color:#000080;"><b>Lihat juga / See also</b></p>
+        <p class="heading" style="font-size:25px; color:#000080;"><b>Lihat juga / See also</b></p>
         <ul>
             <li><a href="portofolio.html">Portofolio Devan</a></li>
         </ul>
         <br>
-        <p class="title" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box title">
+        <p class="heading" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box heading">
             <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
             <div class="btn-group">
                 <a href="index.html">Home</a>
@@ -74,11 +68,12 @@
                 <a href="hasil-karya.html">Hasil Karya</a>
                 <a href="timeline.html">Timeline</a>
                 <a href="updates.html">Updates</a>
+                <a href="projects.html">Projects</a>
             </div>
             <div class="clearfix"></div><br>
         </div>
         <br>
-        <a class="button title" href="#home">Kembali ke awal</a>
+        <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
