--- a/portofolio.html
+++ b/portofolio.html
@@ -5,18 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
-    <div class="top-container title">
+    <div class="top-container heading">
         <div class="dropdown" style="margin-right:20px; float:left;">
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
-            <div class="dropdown-content">
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-            </div>
+            <div class="dropdown-content" id="boxlink"></div>
+            <script src="script.js"></script>
         </div>
         <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
         <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
@@ -24,7 +20,7 @@
     </div>
     <div class="container">
         <br>
-        <font class="title" id="home" size="7" color="#146480"><b>Portofolio</b></font>
+        <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Portofolio</b></div>
         <p>
         Portofolio yang berisi apa saja, dibuat di Canva<br>
         Link: <a href="https://www.canva.com">Website Canva</a>
@@ -32,7 +28,7 @@
         <p style="color:red">
         *Untuk Nomor Telepon dan Email, jangan digunakan ya!
         </p>
-        <p class="title" style="font-size:25px; color:#000080;"><b>Kumpulan Slide Portofolio</b></p>
+        <p class="heading" style="font-size:25px; color:#000080;"><b>Kumpulan Slide Portofolio</b></p>
         <div class="image">
             <img src="portofolio/1.png" width="500">
             <img src="portofolio/2.png" width="500"><br>
@@ -41,32 +37,34 @@
             <img src="portofolio/5.png" width="500">
             <img src="portofolio/6.png" width="500">
         </div>
-        <p class="title" style="font-size:25px; color:#000080;"><b>QR Code</b></p>
+        <p class="heading" style="font-size:25px; color:#000080;"><b>QR Code</b></p>
         <p>Scan QR Code disini ya!</p>
         <img src="portofolio/static_qr_code_without_logo.jpg" width="200">
         <br><br>
-        <p class="title" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box title">
-            <p>
-            Link halaman:<br>
-            <a href="index.html">Home</a> |
-            <a href="blog.html">Blog</a> |
-            <a href="fakta.html">Fakta</a> |
-            <a href="profil.html">Profil</a> |
-            <b>Portofolio</b> |
-            <a href="hasil-karya.html">Hasil Karya</a> |
-            <a href="timeline.html">Timeline</a> |
-            <a href="updates.html">Updates</a>
-            </p>
+        <p class="heading" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box heading">
+            <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
+            <div class="btn-group">
+                <a href="index.html">Home</a>
+                <a href="blog.html">Blog</a>
+                <a href="fakta.html">Fakta</a>
+                <a href="profil.html">Profil</a>
+                <a class="selected">Portofolio</a>
+                <a href="hasil-karya.html">Hasil Karya</a>
+                <a href="timeline.html">Timeline</a>
+                <a href="updates.html">Updates</a>
+                <a href="projects.html">Projects</a>
+            </div>
+            <div class="clearfix"></div><br>
         </div>
         <br>
-        <a class="button title" href="#home">Kembali ke awal</a>
+        <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 19 Sep 2023<br>
-        Copyright © 2023 by Devan
+        Terakhir diupdate: 26 Jan 2024<br>
+        Copyright © 2024 by Devan
         </p>
     </footer>
 </body>
