--- a/hasil-karya.html
+++ b/hasil-karya.html
@@ -5,27 +5,26 @@
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
-    <div class="top-container title">
+    <div class="top-container heading">
         <div class="dropdown" style="margin-right:20px; float:left;">
-            <!-- <button class="dropbtn">MENU</button> -->
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
             <div class="dropdown-content" id="boxlink"></div>
             <script src="script.js"></script>
         </div>
         <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
         <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
 	<div class="container">
         <br>
-        <div class="title" id="home" style="font-size:50px; color:#146480;"><b>Hasil Karya</b></div>
+        <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Hasil Karya</b></div>
         <p>
         Hasil Karya berisi karya yang sudah dibuat selama ini, seperti koding dan menggambar.
         </p>
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
             1. <a href="#1">Canva</a><br>
@@ -38,55 +37,31 @@
             </p>
         </div>
         <br>
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
-		<p class="title" id="1" style="font-size: 25px"><b>1. Canva</b></p>
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
+		<p class="heading" id="1" style="font-size: 25px"><b>1. Canva</b></p>
         <div class="container2">
 			<img src="images/canva-icon.png" width="100">
             <div class="clearfix"></div>
-            <p>Inilah beberapa project canva yang sudah dibuat di Canva<br>Berikut ini ada beberapa presentasi yang sudah pernah buat:</p>
+            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
             <ul>
-                <div class="column" style="padding-right: 100px;">
-                    <li>
-                        <!-- <a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a><br> -->
-                        <a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/view">Entrepreneur Term 2</a><br>
-                        Tugas Sekolah Kelas 10<br>
-                        Dibuat: November 2023
-                    </li><br>
-                    <li>
-                        <a href="https://www.canva.com/design/DAFwXlWF5Ko/qLFstaN2wWiQQCl179B3KQ/view">Laporan Hidroponik Tanaman Kangkung</a><br>
-                        Dibuat: Oktober 2023
-                    </li><br>
-                    <li>
-                        <a href="https://www.canva.com/design/DAFwFtdQ0Ko/CZakrbjnuprD6d988TQL8Q/view">Entrepreneur Term 1</a><br>
-                        Dibuat: September 2023
-                    </li><br>
-                </div>
-                <div class="column">
-                    <li>
-                        <a href="https://www.canva.com/design/DAFTTOc-ulA/u2hnjpYUx-o8QH9b0yHNlw/view">Observasi Bandeng Juwana Elrina</a><br>
-                        Dibuat: November 2022
-                    </li><br>
-                    <li>
-                        <a href="https://www.canva.com/design/DAFIDBYDpJw/u54kaC39SdO2cQgt5LWrnQ/view">Produk Chokies</a><br>
-                        Dibuat: Agustus 2022
-                    </li><br>
-                </div>
-                <div class="clearfix"></div>
+                <li><a href="https://www.canva.com/design/DAF0n98aNrE/2Ywu2IQ0lNZ5a3dW5GGuvQ/edit">Entrepreneur Term 2</a> - Tugas Sekolah</li>
+                <li><a href="https://www.canva.com/design/DAFwFtdQ0Ko/CZakrbjnuprD6d988TQL8Q/edit">Entrepreneur Term 1</a> - Tugas Sekolah</li>
+                <li>Coming Soon</li>
             </ul>
         </div><br>
 		
-        <p class="title" id="2" style="font-size: 25px"><b>2. Google Form</b></p>
+        <p class="heading" id="2" style="font-size: 25px"><b>2. Google Form</b></p>
         <div class="container2">
             <img src="images/google-form-icon.png" width="100">
 			<div class="clearfix"></div>
-            <p>Google Form adalah website untuk mengisi form yang terdiri dari kuis, pilihan ganda, dan paragraf.<br>Berikut ini ada beberapa google form yang sudah pernah buat:</p>
+            <p>Inilah beberapa program yang sudah dibuat di Streamlit<br>Berikut ini ada 8 program yang sudah pernah buat:</p>
             <ul>
                 <li><a href="https://docs.google.com/forms/d/1TYLPl871KmzQhd0X6kO_xlqiosELJifWl6R7xTDWvaE/">Kuis dan Pertanyaan Astronomi</a> - Belum sepenuhnya selesai</li>
                 <li>Refleksi Liburan</li>
             </ul>
         </div><br>
 		
-		<p class="title" id="3" style="font-size: 25px"><b>3. Kumpulan Website</b></p>
+		<p class="heading" id="3" style="font-size: 25px"><b>3. Kumpulan Website</b></p>
 		<div class="container2">
 			<p>Inilah beberapa website yang sudah pernah dibuat sebelumnya:</p>
             <ul>
@@ -99,7 +74,7 @@
             </ul>
 		</div><br>
 		
-        <p class="title" id="4" style="font-size: 25px"><b>4. Hasil Karya Kelas 7</b></p>
+        <p class="heading" id="4" style="font-size: 25px"><b>4. Hasil Karya Kelas 7</b></p>
         <table class="container2">
             <tr>
                 <th style="width:200px;">Nama Karya</th>
@@ -132,14 +107,14 @@
         </table>
         <br>
 		
-		<p class="title" id="5" style="font-size: 25px"><b>5. Hasil Karya Kelas 8</b></p>
-		<p class="title" id="6" style="font-size: 25px"><b>6. Hasil Karya Kelas 9</b></p>
-		<p class="title" id="7" style="font-size: 25px"><b>7. Hasil Karya Kelas 10</b></p>
+		<p class="heading" id="5" style="font-size: 25px"><b>5. Hasil Karya Kelas 8</b></p>
+		<p class="heading" id="6" style="font-size: 25px"><b>6. Hasil Karya Kelas 9</b></p>
+		<p class="heading" id="7" style="font-size: 25px"><b>7. Hasil Karya Kelas 10</b></p>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box title">
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box heading">
             <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
             <div class="btn-group">
                 <a href="index.html">Home</a>
@@ -155,12 +130,12 @@
             <div class="clearfix"></div><br>
         </div>
         <br>
-        <a class="button title" href="#home">Kembali ke awal</a>
+        <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 10 Jan 2024<br>
+        Terakhir diupdate: 26 Jan 2024<br>
         Copyright © 2024 by Devan
         </p>
     </footer>
