--- a/updates.html
+++ b/updates.html
@@ -5,32 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
 </head>
 <body>
-    <div class="top-container title">
+    <div class="top-container heading">
         <div class="dropdown" style="margin-right:20px; float:left;">
-            <!-- <button class="dropbtn">MENU</button> -->
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
-            <div class="dropdown-content">
-                <a href="index.html">Home</a>
-                <a href="blog.html">Blog</a>
-                <a href="fakta.html">Fakta</a>
-                <a href="profil.html">Profil</a>
-                <a href="portofolio.html">Portofolio</a>
-            </div>
+            <div class="dropdown-content" id="boxlink"></div>
+            <script src="script.js"></script>
         </div>
         <img src="images/blank-profile.jpg" width="40" style="border-radius: 50%; vertical-align:middle; margin-right:20px; float:left;">
-        <!-- <font size="6" color="white"><b>SEBUAH WEBSITE</b></font> -->
         <div style="font-size:30px; color:white;"><b>SEBUAH WEBSITE</b></div>
         <div class="clearfix"></div>
     </div>
     <div class="container">
         <br>
-        <div class="title" id="home" style="font-size:50px; color:#14806a;"><b>Updates dan Progress</b></div>
+        <div class="heading" id="home" style="font-size:50px; color:#14806a;"><b>Updates dan Progress</b></div>
         <p>
         Updates dan Progress berisi update-update dan kemajuan di website ini.
         </p>
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
             <a href="#8">Version 1.7</a><br>
@@ -44,57 +38,57 @@
             </p>
         </div>
         <br>
-        <p class="title" style="font-size:30px; color:hsl(154, 50%, 25%);"><u><b>ISI HALAMAN</b></u></p>
-        <p class="title" id="8" style="font-size: 25px"><b>Version 1.7</b></p>
+        <p class="heading" style="font-size:30px; color:hsl(154, 50%, 25%);"><u><b>ISI HALAMAN</b></u></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>Version 1.7</b></p>
         <p>Menambahkan halaman timeline dan updates, dan mengubah font menjadi 3 font yang berbeda</p>
         <!-- <div class="container2"> -->
         <div class="image">
-            <img src="progress/2023-09-19-3.png" width="500">
-            <img src="progress/2023-09-19-4.png" width="500">
+            <img src="progress/2024-01-26-2.png" width="500">
+            <img src="progress/2024-01-26.png" width="500">
             <img src="progress/2023-09-19-4.png" width="500">
             <img src="progress/2023-09-19-3.png" width="500">
             <img src="progress/2023-09-19-2.png" width="500">
             <img src="progress/2023-09-17-3.png" width="500">
             <img src="progress/2023-09-15-3.png" width="500">
         </div>
-        <p class="title" id="7" style="font-size: 25px"><b>Version 1.6</b></p>
+        <p class="heading" id="7" style="font-size: 25px"><b>Version 1.6</b></p>
         <p>Menambahkan menu dropdown dan fade warna background di atas</p>
         <div class="image">
             <img src="progress/2023-09-15-2.png" width="500">
             <img src="progress/2023-09-15.png" width="500">
             <img src="progress/2023-08-30.png" width="500">
         </div>
-        <p class="title" id="6" style="font-size: 25px"><b>Version 1.5</b></p>
+        <p class="heading" id="6" style="font-size: 25px"><b>Version 1.5</b></p>
         <div class="image">
             <img src="progress/2023-08-25.png" width="500">
         </div>
-        <p class="title" id="5" style="font-size: 25px"><b>Version 1.4</b></p>
+        <p class="heading" id="5" style="font-size: 25px"><b>Version 1.4</b></p>
         <div class="image">
             <img src="progress/2023-08-21-2.png" width="500">
             <img src="progress/2023-08-21.png" width="500">
         </div>
 
-        <p class="title" id="4" style="font-size: 25px"><b>Version 1.3</b></p>
+        <p class="heading" id="4" style="font-size: 25px"><b>Version 1.3</b></p>
 
-        <p class="title" id="3" style="font-size: 25px"><b>Version 1.2</b></p>
+        <p class="heading" id="3" style="font-size: 25px"><b>Version 1.2</b></p>
         <p>Menambahkan halaman blog</p>
         <div class="image">
             <img src="progress/2023-08-01-2.png" width="500">
             <img style="border: 2px solid black;" src="progress/2023-08-01.png" width="500">
         </div>
-        <p class="title" id="2" style="font-size: 25px"><b>Version 1.1</b></p>
+        <p class="heading" id="2" style="font-size: 25px"><b>Version 1.1</b></p>
         <div class="image">
             <img src="progress/2023-04-28.png" width="500">
         </div>
-        <p class="title" id="1" style="font-size: 25px"><b>Version 1.0</b></p>
+        <p class="heading" id="1" style="font-size: 25px"><b>Version 1.0</b></p>
         <div class="image">
             <img src="progress/2023-04-05.png" width="500">
             <img src="progress/2023-04-13.png" width="500">
         </div>
         <br>
 
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box title">
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box heading">
             <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
             <div class="btn-group">
                 <a href="index.html">Home</a>
@@ -105,16 +99,17 @@
                 <a href="hasil-karya.html">Hasil Karya</a>
                 <a href="timeline.html">Timeline</a>
                 <a class="selected">Updates</a>
+                <a href="projects.html">Projects</a>
             </div>
             <div class="clearfix"></div><br>
         </div>
         <br>
-        <a class="button title" href="#home">Kembali ke awal</a>
+        <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
         <p style="font-family:'Consolas'; margin-left:10px; line-height:1.5;">
-        Terakhir diupdate: 1 Okt 2023<br>
+        Terakhir diupdate: 1 Feb 2024<br>
         Copyright © 2023 by Devan
         </p>
     </footer>
