--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <!-- <style></style> -->
 <body>
-    <div class="top-container title">
+    <div class="top-container heading">
         <div class="dropdown" style="margin-right:20px; float:left;">
             <!-- <button class="dropbtn">MENU</button> -->
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
@@ -29,8 +29,8 @@
     </div>
     <div class="container">
         <br>
-        <!-- <font class="title" id="home" size="7" color="#004080"><b>Website Devan</b></font> -->
-        <div class="title" id="home" style="font-size:50px; color:#004080;"><b>Website Devan</b></div>
+        <!-- <font class="heading" id="home" size="7" color="#004080"><b>Website Devan</b></font> -->
+        <div class="heading" id="home" style="font-size:50px; color:#004080;"><b>Website Devan</b></div>
         <p>
         Ini adalah program yang sudah Devan kerjakan, jumlahnya ada 8.<br>
         Semuanya berkaitan dengan Matematika dan program tersebut Devan kerjakan selama 3 tahun, selama Devan SMP.<br>
@@ -49,7 +49,7 @@
         <br><br>
         Font untuk heading sudah berubah dari <b>Raleway</b> ke <b>Inter</b>, dan menunya sudah diperbaiki dan diperlengkap, sehingga versinya berubah menjadi v1.7.4.
         </p>
-        <p class="title" style="font-size:25px; color:#000080;">
+        <p class="heading" style="font-size:25px; color:#000080;">
             <b>Link program:</b>&nbsp;
             <img style="vertical-align:middle;" src="images/link.png" alt="Link icon" width="30">
         </p>
@@ -67,7 +67,7 @@
         <!-- <p>Website baru: <b>Portofolio</b>, <b>Fakta dan Informasi</b>, dan <b>Blog dan Cerita</b></p> -->
         <p>Website baru: <b>Updates</b>, <b>Timeline</b>, dan <b>Portofolio</b></p>
         <p>Selain itu, ada juga link yang akan kita gunakan di masa depan nanti.</p>
-        <p class="title" style="font-size:25px; color:#000080;">
+        <p class="heading" style="font-size:25px; color:#000080;">
             <b>Link yang akan datang:</b>&nbsp;
             <img style="vertical-align:middle;" src="images/link.png" alt="Link icon" width="30">
         </p>
@@ -91,7 +91,7 @@
             <li>Input dalam Matematika (HTML) - <span style="color:maroon">v1.9</span></li>
         </ul><br>
         <p>Link luar terdiri dari beberapa link yang mungkin suka, dan terkait di halaman ini.</p>
-        <p class="title" style="font-size:25px; color:#000080;">
+        <p class="heading" style="font-size:25px; color:#000080;">
             <b>Link luar:</b>&nbsp;
             <img style="vertical-align:middle;" src="images/link.png" alt="Link icon" width="30">
         </p>
@@ -104,7 +104,7 @@
 
         <hr style="height:2px; border-width:0; background-color:gray">
 
-        <p class="title" style="font-size:25px; color:#300080;">
+        <p class="heading" style="font-size:25px; color:#300080;">
             <b>Informasi halaman</b>&nbsp;
             <img style="vertical-align:middle;" src="images/page.png" alt="Page icon" width="30">
         </p>
@@ -158,7 +158,7 @@
         </table>
         <br>
 
-        <p class="title" style="font-size:25px; color:#300080;">
+        <p class="heading" style="font-size:25px; color:#300080;">
             <b>Informasi halaman selanjutnya</b>&nbsp;
             <img style="vertical-align:middle;" src="images/page.png" alt="Page icon" width="30">
         </p>
@@ -181,7 +181,7 @@
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
         <br>
         <hr style="height:2px; border-width:0; background-color:gray">
-        <p class="title" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <p class="heading" style="font-size:25px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
         <!--
         <div class="btn-group">
         <a href="blog.html">Blog</a> |
@@ -193,7 +193,7 @@
         <a href="updates.html">Updates</a>
         </div>
         -->
-        <div class="box title" id="demo">
+        <div class="box heading" id="demo">
             <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
             <div class="btn-group">
                 <a class="selected">Home</a>
@@ -211,7 +211,7 @@
         <br>
         <!-- <p id="demo"></p> -->
         <!-- <a href="#home">Kembali ke awal</a> -->
-        <a class="button title" href="#home">Kembali ke awal</a>
+        <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
         <!-- <footer style=""> -->
     </div>
