--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
 </head>
 <body>
-    <div class="top-container title">
+    <div class="top-container heading">
         <div class="dropdown" style="margin-right:20px; float:left;">
             <!-- <button class="dropbtn">MENU</button> -->
             <button class="dropbtn" style="background-color:transparent; font-size:0;"><img src="images/menu-icon.jpg" width="30"></button>
@@ -23,11 +24,11 @@
     </div>
     <div class="container">
         <br>
-        <div class="title" id="home" style="font-size:50px; color:#146480;"><b>Projects</b></div>
+        <div class="heading" id="home" style="font-size:50px; color:#146480;"><b>Projects</b></div>
         <p>
         Timeline dan Sejarah berisi kejadian timeline yang sudah terjadi, baik dalam hal sekolah maupun perjalanan.
         </p>
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>DAFTAR ISI</b></u></p>
         <div class="box" style="max-width: 500px;">
             <p>
             1. <a href="#1">Program Streamlit</a><br>
@@ -39,8 +40,8 @@
             </p>
         </div>
         <br>
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
-        <p class="title" id="1" style="font-size: 25px"><b>1. Program Streamlit</b></p>
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>ISI HALAMAN</b></u></p>
+        <p class="heading" id="1" style="font-size: 25px"><b>1. Program Streamlit</b></p>
         <div class="container2">
             <!-- <div class="image"> -->
             <img src="images/streamlit-logo.png" width="150">
@@ -57,42 +58,42 @@
                 <li><a href="https://devandaniel9-shape-program-devan-7zwso4.streamlit.app/">Bangun Datar dan Bangun Ruang</a> - Sudah ada Program Geometri</li>
             </ul>
         </div><br>
-        <p class="title" id="2" style="font-size: 25px"><b>2. Bangun Datar</b></p>
+        <p class="heading" id="2" style="font-size: 25px"><b>2. Bangun Datar</b></p>
         <div class="container2">
             <img src="images/2d-shapes.png" width="250">
             <div class="clearfix"></div>
             <p>Ada program bangun datar, cuma bukan Streamlit</p>
             <p><a href="projects/Bangun Datar.html">Bangun Datar</a> (versi HTML)</p>
         </div><br>
-        <p class="title" id="3" style="font-size: 25px"><b>3. Progress Bar</b></p>
+        <p class="heading" id="3" style="font-size: 25px"><b>3. Progress Bar</b></p>
         <div class="container2">
             <p>Progress bar yang baru</p>
             <a href="projects/Progress Bar.html">Progress Bar HTML</a>
         </div><br>
-        <p class="title" id="4" style="font-size: 25px"><b>4. BMI Calculator</b></p>
+        <p class="heading" id="4" style="font-size: 25px"><b>4. BMI Calculator</b></p>
         <div class="container2">
             <img src="images/bmi-image.jpg" width="150">
             <div class="clearfix"></div>
             <p>Ada program untuk menghitung BMI tubuh, berdasarkan berat dan tinggi badan.</p>
             <a href="projects/BMI calculator.html">BMI Calculator</a>
         </div><br>
-        <p class="title" id="5" style="font-size: 25px"><b>5. Soal Matematika</b></p>
+        <p class="heading" id="5" style="font-size: 25px"><b>5. Soal Matematika</b></p>
         <div class="container2">
             <p>Soal Pertanyaan dalam Matematika</p>
             <a href="projects/Soal Matematika.html">Soal Matematika</a>
         </div>
-        <p class="title" id="6" style="font-size: 25px"><b>6. Penghitung Waktu</b></p>
+        <p class="heading" id="6" style="font-size: 25px"><b>6. Penghitung Waktu</b></p>
         <div class="container2">
             <p>Penghitung Waktu</p>
             <a href="projects/Penghitung Waktu.html">Penghitung Waktu</a>
         </div>
-        <p class="title" id="7" style="font-size: 25px"><b>7. Bangun 3 Dimensi</b></p>
-        <p class="title" id="8" style="font-size: 25px"><b>8. Labirin / Maze</b></p>
+        <p class="heading" id="7" style="font-size: 25px"><b>7. Bangun 3 Dimensi</b></p>
+        <p class="heading" id="8" style="font-size: 25px"><b>8. Labirin / Maze</b></p>
 
         <p style="text-align:center"><b>#--#--#--#--#--#--#--# &nbsp;&nbsp; <u>UNDER CONSTRUCTION</u> &nbsp;&nbsp; #--#--#--#--#--#--#--#</b></p>
 
-        <p class="title" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
-        <div class="box title">
+        <p class="heading" style="font-size:30px; color:#206044;"><u><b>BEBERAPA LINK:</b></u></p>
+        <div class="box heading">
             <p style="font-size:22px; margin-bottom:5px;"><b>Link halaman:</b></p>
             <div class="btn-group">
                 <a href="index.html">Home</a>
@@ -108,7 +109,7 @@
             <div class="clearfix"></div><br>
         </div>
         <br>
-        <a class="button title" href="#home">Kembali ke awal</a>
+        <a class="button heading" href="#home">Kembali ke awal</a>
         <br><br>
     </div>
     <footer style="background-color:#404040; padding:10px; color:white;">
